--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.1.9",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
